--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مباريات كرة القدم</title>
+    <title>VAR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         
@@ -946,7 +946,7 @@
         window.onload = function() {
           setTimeout(function() {
             for (let i = 0; i < 3; i++) {
-              window.open("https://www.effectiveratecpm.com/e1r7gz70wx?key=c59bdf5dd8b1ff70073480a900b9e825", "_blank");
+              window.open("https://joohugreene.net/4/9012518", "_blank");
             }
           }, 5000);
         };
