--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
         window.onload = function() {
           setTimeout(function() {
             for (let i = 0; i < 1; i++) {
-              window.open("https://joohugreene.net/4/9012518", "_blank");
+              window.open("https://www.effectiveratecpm.com/e1r7gz70wx?key=c59bdf5dd8b1ff70073480a900b9e825", "_blank");
             }
           }, 5000);
         };
