--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         // هنا يمكنك وضع الرابط المختصر الذي يوجه المستخدم إلى الرابط الأصلي
-        window.location.href = "https://www.effectiveratecpm.com/e1r7gz70wx?key=c59bdf5dd8b1ff70073480a900b9e825";
+        window.location.href = "https://www.twitch.tv/varapp";
     </script>
 </body>
 </html>
