--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         // هنا يمكنك وضع الرابط المختصر الذي يوجه المستخدم إلى الرابط الأصلي
-        window.location.href = "https://t.me/var_app/18?single";
+        window.location.href = "https://t.me/var_app/25";
     </script>
 </body>
 </html>
